--- a/src/App.css
+++ b/src/App.css
@@ -5,10 +5,10 @@
   font-family: "Netflix Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 body {
-  background: #000;
+  background: rgb(0, 0, 0);
+  color: white;
 }
 h1 {
-  font-weight: 500;
   font-size: 50px;
   line-height: 55px;
 }
