--- a/src/pages/Intro/intro.scss
+++ b/src/pages/Intro/intro.scss
@@ -2,23 +2,32 @@ section:not(.intro) {
   border-top: 1px solid rgb(22, 22, 22);
 }
 //global form css
-form {
+.form {
   height: 4rem;
-  background: #000;
-  width: 30rem;
+  position: relative;
+  width: 100%;
+  display: grid;
+  grid-template-columns: 1fr max-content;
+  label {
+    position: absolute;
+    color: rgb(134, 134, 134);
+    top: 1.3rem;
+    left: 0.4rem;
+    pointer-events: none;
+  }
   input {
-    width: 70%;
     height: 100%;
     border: none;
     outline: none;
     padding: 0.4rem;
     font-size: 1rem;
+    &:focus ~ label {
+      top: 0.1rem;
+      font-size: 0.6rem;
+      transition: 0.2s ease;
+    }
   }
   button {
-    display: inline-flex;
-    align-items: center;
-    justify-content: center;
-    width: 30%;
     height: 100%;
     border: none;
     font-size: 1rem;
@@ -108,6 +117,8 @@ form {
     gap: 1rem;
     align-items: center;
     height: 86vh;
+    width: 50vw;
+    margin: 0 auto;
     top: 0;
     text-align: center;
     h1 {
@@ -118,8 +129,9 @@ form {
 
 .features {
   .feature {
-    display: flex;
-    padding: 2rem 10rem;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    padding: 6rem 7rem;
     align-items: center;
     .title {
       h1 {
@@ -139,16 +151,43 @@ form {
         z-index: -1;
       }
     }
-    &:nth-child(2),
-    &:nth-child(4) {
-      flex-direction: row-reverse;
-      gap: 5rem;
+    &:nth-child(even) {
+      position: relative;
+      .title {
+        order: 2;
+      }
+      gap: 2rem;
     }
     &:nth-child(3) {
       video {
         top: 2rem;
         width: 300px;
         left: 5.5rem;
+      }
+    }
+    .img_group {
+      position: relative;
+      .download-status {
+        position: absolute;
+        display: flex;
+        background: #000;
+        justify-content: space-between;
+        align-items: center;
+        gap: 1rem;
+        padding: 0.4rem 1rem;
+        border: 1px solid gray;
+        border-radius: 1rem;
+        bottom: 1rem;
+        left: -1.7rem;
+        img {
+          width: 50px;
+        }
+        p {
+          color: rgb(0, 110, 255);
+        }
+        .downloadGif {
+          margin-left: 4rem;
+        }
       }
     }
   }
@@ -162,7 +201,7 @@ form {
   padding: 1rem 17rem;
   text-align: center;
   #lastform {
-    margin: 0 auto;
+    width: 100%;
     margin-top: 1rem;
   }
 }
@@ -179,12 +218,26 @@ form {
         padding: 0.5rem;
       }
     }
+    main {
+      width: 100%;
+    }
   }
-  form {
+  .form {
     display: flex;
-    justify-content: center;
-    width: 80%;
-    height: 3rem;
+    flex-direction: column;
+    gap: 1rem;
+    width: 90%;
+    align-items: center;
+    height: 7rem;
+    input {
+      width: 100%;
+    }
+    button {
+      padding: 0.5rem;
+    }
+    label {
+      top: 0.9rem;
+    }
   }
   .features {
     .feature {
@@ -206,16 +259,29 @@ form {
           left: 2.5rem;
         }
       }
-      &:nth-child(2),
-      &:nth-child(4) {
-        flex-direction: column;
+      &:nth-child(even) {
+        flex-direction: column-reverse;
         gap: 2rem;
       }
       &:nth-child(3) {
         video {
           top: 1rem;
           width: 200px;
-          left: 4rem;
+          left: 3.5rem;
+        }
+      }
+      .img_group {
+        position: relative;
+
+        font-size: 0.7rem !important;
+
+        .download-status {
+          img {
+            width: 30px;
+          }
+          .downloadGif {
+            margin-left: 1rem;
+          }
         }
       }
     }
