--- a/src/pages/Intro/intro.scss
+++ b/src/pages/Intro/intro.scss
@@ -1,5 +1,6 @@
 section:not(.intro) {
   border-top: 1px solid rgb(22, 22, 22);
+  overflow-x: hidden;
 }
 //global form css
 .form {
@@ -21,7 +22,8 @@ section:not(.intro) {
     outline: none;
     padding: 0.4rem;
     font-size: 1rem;
-    &:focus ~ label {
+    &:focus ~ label,
+    &:valid ~ label {
       top: 0.1rem;
       font-size: 0.6rem;
       transition: 0.2s ease;
@@ -41,13 +43,6 @@ section:not(.intro) {
 .intro {
   height: 100vh;
   color: white;
-  background-repeat: no-repeat;
-  background-image: linear-gradient(
-    0deg,
-    rgba(0, 0, 0, 0.7) 0,
-    transparent 20%,
-    rgba(0, 0, 0, 0.7) 90%
-  );
   &::before {
     content: "";
     background: url(../../assets/hero-img.jpg);
@@ -57,7 +52,7 @@ section:not(.intro) {
     right: 0px;
     bottom: 0px;
     left: 0px;
-    opacity: 0.75;
+    opacity: 0.5;
     height: 100vh;
     z-index: -1;
   }
@@ -132,6 +127,7 @@ section:not(.intro) {
     display: grid;
     grid-template-columns: 1fr 1fr;
     padding: 6rem 7rem;
+    padding-left: 10rem;
     align-items: center;
     .title {
       h1 {
